--- a/html/my.html
+++ b/html/my.html
@@ -141,9 +141,9 @@
             }else if(data.result=='login'){
                 var ua = navigator.userAgent.toLowerCase();
                 if (/iphone|ipad|ipod/.test(ua)) {
-                    iosIsLogin();
+                    //iosIsLogin();
                 } else {
-                    androidIsToken();
+                    //androidIsToken();
                 }
             }else {
                 alert(data.errorMsg);
