--- a/html/myShop.html
+++ b/html/myShop.html
@@ -41,7 +41,7 @@
                     <option value="priceAsc">价格由高到低</option>
                     <option value="salesDesc">销量由高到低</option>
                 </select>
-                <div class="dis-screen-btn dis-screen-active">筛选</div>
+                <div class="dis-screen-btn">筛选</div>
                 <div class="dis-screen">
                     <div class="dis-screen-price">
                         <div class="dis-price-section">价格区间</div>
@@ -103,6 +103,7 @@
     </section>
     <div class="loading">加载更多...</div>
     <div class="no-info">没有更多数据了...</div>
+    <div class="mask"></div>
     <!--分享层-->
     <section class="my-share">
         <ul>
@@ -180,12 +181,10 @@
 <!--<script src="../js/api.2.0.js"></script>-->
 <script src="../js/handlebars-v4.0.10.js"></script>
 <script src="../js/config.js"></script>
-<script src="../js/alert.js"></script>
 <script src="../js/function.js"></script>
 <script src="../js/common.js"></script>
+<script src="../js/alert.js"></script>
 <script src="../js/myShop.js"></script>
-
-
 <!--<script>
     $(document).ready(function () {
         /*筛选按钮的切换*/
