--- a/html/selected.html
+++ b/html/selected.html
@@ -46,7 +46,7 @@
                             <div class="dis-del-sale">
                                 <div class="dis-del"></div>
                                 <div class="dis-sale">
-                                    <span>立即推广</span>
+                                    <span class="now-tuiguang">立即推广</span>
                                 </div>
                             </div>
 
@@ -136,106 +136,19 @@
 <script src="../js/jquery-3.0.0.min.js"></script>
 <script src="../js/api.2.0.js"></script>
 <script src="../js/config.js"></script>
+<script src="../js/function.js"></script>
 <script src="../js/handlebars-v4.0.10.js"></script>
 <script src="../js/common.js"></script>
 <!--<script src="http://res.wx.qq.com/open/js/jweixin-1.0.0.js"></script>-->
 <script src="../js/selected.js"></script>
 <script>
-    $('.dis-sale').click(function () {
-        $('.wxmass-sends').toggle()
-    });
+    /*$('.dis-sale').click(function () {
+        $('.wxmass-sends').toggle();
+    });*/
     $('.cancel').click(function () {
-        $('.wxmass-sends').toggle()
+        $('.wxmass-sends').toggle();
     })
 
 </script>
-<!--<script>
-    wx.config({
-        debug: false,//这里是开启测试，如果设置为true，则打开每个步骤，都会有提示，是否成功或者失败
-        appId: '{$signPackage.appId}',
-        timestamp: '{$signPackage.timestamp}',
-        nonceStr: '{$signPackage.nonceStr}',
-        signature: '{$signPackage.signature}',
-        jsApiList: [
-            'checkJsApi',
-            'onMenuShareTimeline',
-            'onMenuShareAppMessage',
-            'onMenuShareQQ',
-            'onMenuShareWeibo',
-            'hideMenuItems',
-            'showMenuItems',
-            'hideAllNonBaseMenuItem',
-            'showAllNonBaseMenuItem',
-            'translateVoice',
-            'startRecord',
-            'stopRecord',
-            'onRecordEnd',
-            'playVoice',
-            'pauseVoice',
-            'stopVoice',
-            'uploadVoice',
-            'downloadVoice',
-            'chooseImage',
-            'previewImage',
-            'uploadImage',
-            'downloadImage',
-            'getNetworkType',
-            'openLocation',
-            'getLocation',
-            'hideOptionMenu',
-            'showOptionMenu',
-            'closeWindow',
-            'scanQRCode',
-            'chooseWXPay',
-            'openProductSpecificView',
-            'addCard',
-            'chooseCard',
-            'openCard'
-        ]
-    });
-
-    //var  imgUrl="{$cfg.site_url}__STATIC__/hongbao/ewm_gz.jpg";
-    var  imgUrl="http://xzw.wangguanwei.com:8080/image-server/getImage?file=4c900968-6ee0-4aa0-9e28-6e41a8ab20cd.jpg";
-    //var  link="{$cfg.site_url}{:U('Uc/guanzhu')}";
-    var  link="http://www.baidu.com";
-    var  desc="邀请您来金度黄金！";
-    var  title="哈哈哈哈哈哈哈哈";
-    var succesUrl="http://www.qq.com";
-    wx.ready(function(){
-        wx.onMenuShareTimeline({
-            title : title,
-            desc: desc,
-            link : link,
-            imgUrl:imgUrl,
-            success: function () {
-                window.location=succesUrl;
-            },
-            cancel: function () {
-            }
-        });
-        wx.onMenuShareAppMessage({
-            title : title,
-            desc: desc,
-            link : link,
-            imgUrl:imgUrl,
-            success: function () {
-                window.location=succesUrl;
-            },
-            cancel: function () {
-            }
-        });
-        wx.onMenuShareWeibo({
-            title : title,
-            desc: desc,
-            link : link,
-            imgUrl:imgUrl,
-            success: function () {
-                window.location=succesUrl;
-            },
-            cancel: function () {
-            }
-        });
-    });
-&lt;!&ndash;</script>-->
 </body>
 </html>
