增加提现页面，修复弹框点击bug

--- a/html/commodity.html
+++ b/html/commodity.html
@@ -252,6 +252,9 @@
             }else {
                 alert(response.errorMsg);
             }
+        },
+        error:function () {
+            alert('服务器异常');
         }
 
     });
