--- a/html/my.html
+++ b/html/my.html
@@ -24,7 +24,11 @@
         </header>
         <div class="member-withdraw">
             <div>可用余额 <span>{{money}}元</span></div>
-            <div>提现</div>
+            <div>
+                <a href="tixian.html" class="display-box">
+                    提现
+                </a>
+            </div>
         </div>
         <div class="member-order">
             <ul class="member-order-list">
