我的店铺生成二维码

--- a/html/myShop.html
+++ b/html/myShop.html
@@ -150,19 +150,19 @@
     <!--分享层-->
     <section class="my-share">
         <ul>
-            <li class="my-share-li">
+            <li class="my-share-li share-friends">
                 <div class="my-share-li-img">
                     <img src="../images/pyq.png" alt="">
                 </div>
                 <p>朋友</p>
             </li>
-            <li class="my-share-li">
+            <li class="my-share-li share-url">
                 <div class="my-share-li-img">
                     <img src="../images/lj.png" alt="">
                 </div>
                 <p>复制链接</p>
             </li>
-            <li class="my-share-li">
+            <li class="my-share-li share-erweima">
                 <div class="my-share-li-img">
                     <img src="../images/ewm.png" alt="">
                 </div>
@@ -208,6 +208,7 @@
                     <img src="../images/22.jpg" alt="">
                 </div>
                 <div class="myshop-item-code-text">
+                    <div id="share-erweima"></div>
                     <span>扫描或微信长按识别二维码</span>
                 </div>
             </div>
@@ -226,11 +227,10 @@
 <script src="../js/function.js"></script>
 <script src="../js/common.js"></script>
 <script src="../js/alert.js"></script>
+<script src="../js/qrcode.min.js"></script>
 <script src="../js/aui-lazyload.js"></script>
 <script src="../js/myShop.js"></script>
-<script>
 
-</script>
 
 </body>
 </html>
